[package]
name = "rusty-mq"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
prometheus = "0.13"
anyhow = "1"
dotenvy = "0.15"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
